--- a/basic/indext.html
+++ b/basic/indext.html
@@ -11,7 +11,7 @@
     <title>develop your site</title>
 
     <script src="https://kit.fontawesome.com/0e8fa33468.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="construction.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class=" col-4">
 
-                        <img src="logo.jpg" class="m-lg-2 img-fluid">
+                        <img src="../Assets/logo.jpg" class="m-lg-2 img-fluid">
                     </div>
 
                     <div class="col-8   d-flex justify-content-end ">
@@ -124,7 +124,7 @@
                         <div id="carouselExample" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="Primavista-Dhayari.jpg" class="d-block w-100">
+                                    <img src="../Assets/Primavista-Dhayari.jpg" class="d-block w-100">
                                 </div>
                                 <!-- <div class="carousel-item">
                                     <img src="Hindavi.jpg" class="d-block w-100">
@@ -148,7 +148,7 @@
                 <div class="row p-5">
                     <div class="col-lg-6">
                         <div class="story_box1">
-                            <img src="the-hindavi-group-with-slogan.jpg">
+                            <img src="../Assets/the-hindavi-group-with-slogan.jpg">
                         </div>
 
 
@@ -219,7 +219,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="Satisfaction_box">
-                                <img src="man.jpg">
+                                <img src="../Assets/man.jpg">
                             </div>
                         </div>
                     </div>
@@ -264,14 +264,14 @@
                 <div class="row">
                     <div class="col-lg-4 ">
                         <div class="photo1">
-                            <img src="bainlo1.jpg" class="img-fluid">
+                            <img src="../Assets/bainlo1.jpg" class="img-fluid">
                         </div>
 
 
                     </div>
                     <div class="col-lg-8 ">
                         <div class="photo2">
-                            <img src="bainlo2.jpg">
+                            <img src="../Assets/bainlo2.jpg">
                         </div>
 
                     </div>
@@ -393,19 +393,19 @@
                             <div class="col-12">
                                 <div class="slid">
                                     <div class="slid1">
-                                        <img src="recent1.jpg">
+                                        <img src="../Assets/recent1.jpg">
                                     </div>
                                     <div class="slid2">
-                                        <img src="recent2.jpg" alt="">
+                                        <img src="../Assets/recent2.jpg" alt="">
                                     </div>
                                     <div class="slid3  ">
-                                        <img src="recent3.jpg" alt="">
+                                        <img src="../Assets/recent3.jpg" alt="">
                                     </div>
                                     <div class="slid4 ">
-                                        <img src="recent4.jpg" alt="">
+                                        <img src="../Assets/recent4.jpg" alt="">
                                     </div>
                                     <div class="slid5 ">
-                                        <img src="recent5.jpg" alt="">
+                                        <img src="../Assets/recent5.jpg" alt="">
                                     </div>
 
                                 </div>
@@ -425,44 +425,44 @@
 
 
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk1.jpg" class="img-fluid">
+                                <img src="../Assets/bk1.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk2.jpg" class="img-fluid">
+                                <img src="../Assets/bk2.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk3.jpg" class="img-fluid">
+                                <img src="../Assets/bk3.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk4.jpg" class="img-fluid">
+                                <img src="../Assets/bk4.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk5.jpg" class="img-fluid">
+                                <img src="../Assets/bk5.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk6.jpg" class="img-fluid">
+                                <img src="../Assets/bk6.jpg" class="img-fluid">
                             </div>
 
 
 
 
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk7.jpg" class="img-fluid">
+                                <img src="../Assets/bk7.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk8.jpg" class="img-fluid">
+                                <img src="../Assets/bk8.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk9.jpg" class="img-fluid">
+                                <img src="../Assets/bk9.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk10.jpg" class="img-fluid">
+                                <img src="../Assets/bk10.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk11.jpg" class="img-fluid">
+                                <img src="../Assets/bk11.jpg" class="img-fluid">
                             </div>
                             <div class="banks1 col-lg-2 col-md-4 col-sm-6">
-                                <img src="bk12.jpg" class="img-fluid">
+                                <img src="../Assets/bk12.jpg" class="img-fluid">
                             </div>
 
 
@@ -480,7 +480,7 @@
 				<div class="container" id="footer">
 					<div class="row p-0">
 						<div class="col-xl-8 col-sm-12">
-							<img class="mt-5" src="logo.jpg"
+							<img class="mt-5" src="../Assets/logo.jpg"
 								height="40px">
 						</div>
 						<div class="col-xl-4 col-sm-12" id="download">
